--- a/AboutMeDataBinding-Starter/app/build.gradle
+++ b/AboutMeDataBinding-Starter/app/build.gradle
@@ -20,8 +20,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    // Enable data binding here.
-}
+    dataBinding {
+        enabled = true
+    }}
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
